--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -32,7 +32,7 @@
             "Arn"
           ],
           "category": "function",
-          "resourceName": "todoListHandler"
+          "resourceName": "userProfileHandler"
         },
         {
           "attributes": [
@@ -48,7 +48,7 @@
             "Arn"
           ],
           "category": "function",
-          "resourceName": "userProfileHandler"
+          "resourceName": "todoListHandler"
         }
       ],
       "providerPlugin": "awscloudformation",
@@ -190,6 +190,248 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_addCollaboratorToList_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addCollaboratorToList"
+        }
+      ]
+    },
+    "AMPLIFY_function_addCollaboratorToList_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addCollaboratorToList"
+        }
+      ]
+    },
+    "AMPLIFY_function_addTaskToList_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addTaskToList"
+        }
+      ]
+    },
+    "AMPLIFY_function_addTaskToList_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addTaskToList"
+        }
+      ]
+    },
+    "AMPLIFY_function_createTaskFromTodoList_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "createTaskFromTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_createTaskFromTodoList_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "createTaskFromTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_createTodoList_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "createTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_createTodoList_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "createTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_dynamodbTriggerCreateThumbnail_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "dynamodbTriggerCreateThumbnail"
+        }
+      ]
+    },
+    "AMPLIFY_function_dynamodbTriggerCreateThumbnail_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "dynamodbTriggerCreateThumbnail"
+        }
+      ]
+    },
+    "AMPLIFY_function_fetchTasksFromTodoList_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "fetchTasksFromTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_fetchTasksFromTodoList_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "fetchTasksFromTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_getTodoList_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "getTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_getTodoList_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "getTodoList"
+        }
+      ]
+    },
+    "AMPLIFY_function_getUserProfile_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "getUserProfile"
+        }
+      ]
+    },
+    "AMPLIFY_function_getUserProfile_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "getUserProfile"
+        }
+      ]
+    },
+    "AMPLIFY_function_modifyTask_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "modifyTask"
+        }
+      ]
+    },
+    "AMPLIFY_function_modifyTask_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "modifyTask"
+        }
+      ]
+    },
+    "AMPLIFY_function_s3TriggerDynamoDB_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "s3TriggerDynamoDB"
+        }
+      ]
+    },
+    "AMPLIFY_function_s3TriggerDynamoDB_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "s3TriggerDynamoDB"
+        }
+      ]
+    },
+    "AMPLIFY_function_serverlessproject30ed819cPostConfirmation_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "serverlessproject30ed819cPostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_serverlessproject30ed819cPostConfirmation_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "serverlessproject30ed819cPostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_tasksHandler_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "tasksHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_tasksHandler_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "tasksHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_todoListHandler_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "todoListHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_todoListHandler_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "todoListHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_updateUserProfile_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "updateUserProfile"
+        }
+      ]
+    },
+    "AMPLIFY_function_updateUserProfile_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "updateUserProfile"
+        }
+      ]
+    },
+    "AMPLIFY_function_userProfileHandler_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "userProfileHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_userProfileHandler_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "userProfileHandler"
+        }
+      ]
     }
   },
   "storage": {
