--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-dynamodb": "^3.425.0",
     "@aws-sdk/client-s3": "^3.425.0",
     "@aws-sdk/lib-dynamodb": "^3.425.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "aws-amplify": "^5.3.11",
     "aws-sdk": "^2.1470.0",
     "draft-js": "^0.11.7",
@@ -23,7 +24,10 @@
     "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
