change pipenv python from 3.11 to 3.8 to see if fix build error

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -194,6 +194,13 @@
       "service": "Lambda"
     }
   },
+  "hosting": {
+    "amplifyhosting": {
+      "providerPlugin": "awscloudformation",
+      "service": "amplifyhosting",
+      "type": "manual"
+    }
+  },
   "parameters": {
     "AMPLIFY_function_addCollaboratorToList_deploymentBucketName": {
       "usedBy": [
@@ -464,6 +471,22 @@
         {
           "category": "function",
           "resourceName": "userProfileHandler"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_appId": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_type": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
         }
       ]
     }
