--- a/amplify/backend/function/s3TriggerDynamoDB/Pipfile
+++ b/amplify/backend/function/s3TriggerDynamoDB/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 
 [packages]
 src = {editable = true, path = "./src"}
+python-jose = "*"
+pytz = "*"
 
 [requires]
 python_version = "3.8"
