--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -196,9 +196,9 @@
   },
   "hosting": {
     "amplifyhosting": {
-      "providerPlugin": "awscloudformation",
+      "lastPushTimeStamp": "2023-10-28T00:02:03.118Z",
       "service": "amplifyhosting",
-      "type": "manual"
+      "type": "cicd"
     }
   },
   "parameters": {
